Add citys dtos for bind json inputs.
