# api/dto/base.go
@@ -10,10 +10,14 @@ type CountryResponse struct {
 	Cities []CityResponse `json:"cities"`
 }
 
-type CreateUpdateCityRequest struct {
+type UpdateCityRequest struct {
 	Name string `json:"name" binding:"required,alpha,min=2,max=20"`
 }
 
+type CreateCityRequest struct {
+	Name      string `json:"name" binding:"required,alpha,min=2,max=20"`
+	CountryId int    `json:"countryId"`
+}
 type CityResponse struct {
 	Id      int             `json:"id"`
 	Name    string          `json:"name"`
